[workspace]
members = ["server", "lambda"]
default-members = ["server", "migrator"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.99"
archodex-error = { path = "archodex-error" }
aws-config = { version = "1.8.6", features = ["behavior-version-latest"] }
aws-sdk-cloudwatch = { version = "1.90.0", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { version = "1.92.0", features = ["behavior-version-latest"] }
aws-sdk-kms = { version = "1.86.0", features = ["behavior-version-latest"] }
aws-sdk-organizations = { version = "1.93.0", features = ["behavior-version-latest"] }
aws-sdk-ssm = { version = "1.92.0", features = ["behavior-version-latest"] }
aws-sdk-sts = { version = "1.85.0", features = ["behavior-version-latest"] }
aws-smithy-runtime-api = "1.9.0"
aws-smithy-types = "1.3.2"
axum = { version = "0.7.9", default-features = false, features = ["http1", "http2", "json", "macros", "query", "tokio", "tower-log", "tracing"] }
base64 = "0.22.1"
migrator = { path = "migrator" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
surrealdb = { version = "= 2.3.7", features = ["rustls"] }
tokio = { version = "1.47.1", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[package]
name = "archodex-backend"
version.workspace = true
edition.workspace = true

[features]
default = ["rocksdb"]
archodex-com = ["dep:archodex-com", "archodex-com/archodex-com"]
rocksdb = ["surrealdb/kv-rocksdb"]

[dependencies]
aes-gcm.workspace = true
archodex-com = { path = "archodex-com", optional = true }
archodex-error.workspace = true
axum.workspace = true
axum-extra = { version = "0.9.6", default-features = false }
axum-macros = "0.4.2"
base64.workspace = true
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
hex = { version = "0.4.3", features = ["serde"] }
josekit = { version = "0.10.3", default-features = false, features = ["vendored"] }
migrator.workspace = true
prost = "0.13.5"
rand = "0.8.5"
reqwest = { version = "0.12.23", default-features = false, features = ["http2", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
surrealdb.workspace = true
tokio.workspace = true
tower = { version = "0.5.2", default-features = false }
tower-http = { version = "0.5.2", default-features = false, features = ["cors", "trace"] }
tracing.workspace = true
uuid = { version = "1.18.1", features = ["v7"] }

[build-dependencies]
prost-build = "0.13.5"
