[package]
name = "archodex-com"
edition.workspace = true
version = "1.0.0+a4b6952cc2df398bc9d5d3c32ab8e71553cd976d"

[lib]
path = "src/lib.rs"

[build-dependencies]
http-body = "1.0.1"
http-body-util = "0.1.3"
octocrab = "0.44.1"
tokio.workspace = true
serde_json.workspace = true
tar = "0.4.44"
flate2 = "1.1.2"

[dependencies]
aes-gcm.workspace = true
archodex-error.workspace = true
axum.workspace = true
aws-config.workspace = true
aws-sdk-cloudwatch.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-kms.workspace = true
aws-sdk-organizations.workspace = true
aws-sdk-ssm.workspace = true
aws-sdk-sts.workspace = true
aws-smithy-runtime-api.workspace = true
aws-smithy-types.workspace = true
base64.workspace = true
serde_json.workspace = true
surrealdb.workspace = true
tokio.workspace = true
tracing.workspace = true

[features]
archodex-com = []